feat(productos): precios multi-moneda (COP/USD)